--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "instagram_clone",
   "version": "1.0.0",
+  "author": "Saliu Damilola",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
